Fix text overflow

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ body {
 
 .calculator {
   width: min(90%, 440px);
-  height: 600px;
+  height: auto;
+  padding-bottom: 1.4rem;
   background-color: var(--dark-blue);
   border-radius: 1.6rem;
   display: flex;
